# ai-server

./: .gitignore  Dockerfile  README.md  build-and-save-images.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py
app/api/endpoints/: chat.py
app/core/: config.py
app/schemas/: chat.py
app/services/: agent_chain.py  chain.py  example.py  history_mapper.py  mcp_chain.py  query_normalizer.py  query_processor.py  rag_cache_processor.py  rag_chain.py  rag_concurrency.py  redis_service.py
data/spring_docs/: spring_ai_repo_docs_upgrade_resolved.jsonl  spring_amqp_repo_docs_upgrade_resolved.jsonl  spring_batch_repo_docs_upgrade_resolved.jsonl  spring_boot_repo_docs_upgrade_resolved.jsonl  spring_credhub_repo_docs_upgrade_resolved.jsonl  spring_data_cassandra_repo_docs_upgrade_resolved.jsonl  spring_data_couchbase_repo_docs_upgrade_resolved.jsonl  spring_data_elasticsearch_repo_docs_upgrade_resolved.jsonl  spring_data_jpa_repo_docs_upgrade_resolved.jsonl  spring_data_ldap_repo_docs_upgrade_resolved.jsonl  spring_data_mongodb_repo_docs_upgrade_resolved.jsonl  spring_data_neo4j_repo_docs_upgrade_resolved.jsonl  spring_data_redis_repo_docs_upgrade_resolved.jsonl  spring_data_relational_repo_docs_upgrade_resolved.jsonl  spring_data_rest_repo_docs_upgrade_resolved.jsonl  spring_framework_repo_docs_upgrade_resolved.jsonl  spring_integration_repo_docs_upgrade_resolved.jsonl  spring_kafka_repo_docs_upgrade_resolved.jsonl  (+10 more)
data_pipeline/: generate_gemini_embeddings.py  run_indexing.py
docs/: llm_tool_calling_mechanics.md  project_context.md
(+8 files in other folders)
